--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
 
-    <title>Elhance Phantom</title>
+    <title>Elance-Phantom</title>
   </head>
   <body>
     <div id="root"></div>
